--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "^15.0.4-canary.12",
-    "next-auth": "^3.24.0-canary.0",
+    "next-auth": "^4.24.10",
+    "quill": "^2.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-quill": "^2.0.0"
   }
 }
