--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@nextui-org/navbar": "^2.0.37",
+    "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.22.0",
     "dompurify": "^3.2.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^11.0.2",
     "force": "^0.0.3",
+    "framer-motion": "^11.11.17",
     "next": "^15.0.4-canary.12",
     "next-auth": "^4.24.10",
     "quill": "^2.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.3",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "prisma": "^5.22.0"
